--- a/team/savvoula.html
+++ b/team/savvoula.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.3567f620.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.7bf15511.js">
+		<link href="../_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.c9e976eb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7c9349ec.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.db244443.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7055da0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.78b76fb5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.e375d530.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.4b1b3231.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.ccf292c5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.fef15f51.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/13.8ba4f9f2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -65,7 +65,7 @@
 			
 			<script>
 				{
-					__sveltekit_eof864 = {
+					__sveltekit_b6immu = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -75,8 +75,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.7bf15511.js"),
-						import("../_app/immutable/entry/app.db244443.js")
+						import("../_app/immutable/entry/start.c9e976eb.js"),
+						import("../_app/immutable/entry/app.4b1b3231.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 13],
