--- a/team/ivana.html
+++ b/team/ivana.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c9e976eb.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.3dca7196.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.e375d530.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.4b1b3231.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.ccf292c5.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.fef15f51.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/6.78692be5.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.eaebf7fb.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.93b45dfa.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.a7219062.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.830d239a.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/6.28dc0374.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonProjects.994b48ac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -38,7 +38,7 @@
 	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Amsterdam, Netherlands</span>
 
 		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:ivana@venopi.com"><i class="fa-light fa-at mr-2"></i> Email
-		</a>
+			</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/ivanasetiawan/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.venopi.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Project: Venopi</a>
@@ -86,7 +86,7 @@
 			
 			<script>
 				{
-					__sveltekit_b6immu = {
+					__sveltekit_uu7t7g = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -96,8 +96,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c9e976eb.js"),
-						import("../_app/immutable/entry/app.4b1b3231.js")
+						import("../_app/immutable/entry/start.3dca7196.js"),
+						import("../_app/immutable/entry/app.93b45dfa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
