--- a/alliance.html
+++ b/alliance.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c9e976eb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3dca7196.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e375d530.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.4b1b3231.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ccf292c5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.fef15f51.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.bc393a9c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.f044a65f.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.eaebf7fb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.93b45dfa.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.a7219062.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.830d239a.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.28663be8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.9430f5f4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -33,7 +33,7 @@
 		</p>
 
 		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal">The HC15 is a <strong class="italic">European-based alliance of 13 diverse and accomplished women entrepreneurs</strong> who came together with the shared goals of collaboration, empowerment and support.</p>
-			<p class="my-4 md:my-6 lg:my-9 leading-normal">This alliance aims to provide a comprehensive and seamless support system for women entrepreneurs on their entrepreneurial journey. By pooling our individual expertise, resources, and specialised offerings, the alliance becomes a one-stop hub, delivering a holistic range of solutions tailored to address every aspect of an entrepreneur&#39;s needs, thus fostering alignment and accelerated growth.</p></div></div></article>
+			<p class="my-4 md:my-6 lg:my-9 leading-normal">This alliance aims to provide a comprehensive and seamless support system for entrepreneurs on their entrepreneurial journey. By pooling our individual expertise, resources, and specialised offerings, the alliance becomes a one-stop hub, delivering a holistic range of solutions tailored to address every aspect of an entrepreneur&#39;s needs, thus fostering alignment and accelerated growth.</p></div></div></article>
 
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden" id="theteam"><div class="max-w-5xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">The Team</h1>
 		<p class="md:text-center lg:text-xl text-slate-200 italic tracking-wide">Meet our 13 diverse and accomplished women entrepreneurs
@@ -56,7 +56,7 @@
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/justyna"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/justyna.jpg" alt="Justyna Kawa" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Justyna Kawa</span>
-		<span class="block text-base italic">Fashion Strategist &amp; Brand Creator</span></div>
+		<span class="block text-base italic">Business and Strategy Consultant</span></div>
 	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/katarzyna"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/kasia.jpg" alt="Katarzyna Bazylczyk" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
@@ -109,7 +109,7 @@
 			
 			<script>
 				{
-					__sveltekit_b6immu = {
+					__sveltekit_uu7t7g = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -119,8 +119,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c9e976eb.js"),
-						import("./_app/immutable/entry/app.4b1b3231.js")
+						import("./_app/immutable/entry/start.3dca7196.js"),
+						import("./_app/immutable/entry/app.93b45dfa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
