--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c9e976eb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3dca7196.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e375d530.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.4b1b3231.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ccf292c5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.fef15f51.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.eaebf7fb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.93b45dfa.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.a7219062.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.830d239a.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.e93a1fd1.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -39,7 +39,7 @@
 			
 			<script>
 				{
-					__sveltekit_b6immu = {
+					__sveltekit_uu7t7g = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -49,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c9e976eb.js"),
-						import("./_app/immutable/entry/app.4b1b3231.js")
+						import("./_app/immutable/entry/start.3dca7196.js"),
+						import("./_app/immutable/entry/app.93b45dfa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
