--- a/team/shweta.html
+++ b/team/shweta.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c9e976eb.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.3dca7196.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.e375d530.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.4b1b3231.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.ccf292c5.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.fef15f51.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/15.68050d75.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.dbf9abcf.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.eaebf7fb.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.93b45dfa.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.a7219062.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.830d239a.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/15.2025b6cb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -36,14 +36,15 @@
 
 	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Utrecht, Netherlands</span>
 
-		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:email"><i class="fa-light fa-at mr-2"></i> Email
-		</a>
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:shweta.cu@gmail.com"><i class="fa-light fa-at mr-2"></i> Email
+			</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/srivastavshweta/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Shweta is an architect, researcher, educator and entrepreneur. She has 15+ years of experience in education and sustainability working across glocal scales and countries. She was co-lead for Erasmus funded Learning Networks for Sustainability for the India network. She works with education and organisations in the Netherlands and India on bringing futures, systems and design thinking, accelerating transitions to regenerative futures. She is also a lecturer for Global Project and Change Management at Windesheim University in the Netherlands and founding member of Living Cities Earth Network. She coordinated the UNESCO chair in culture, habitat and sustainable development and contributes to multiple glocal networks on systems innovation,transitions and sustainability.
-				</p></div>
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">Shweta is an architect, researcher, educator and entrepreneur. She has 15+ years of experience in education and sustainability working across glocal scales and countries. She was co-lead for Erasmus funded Learning Networks for Sustainability for the India network. She works with education and organisations in the Netherlands and India on bringing futures, systems and design thinking, accelerating transitions to regenerative futures.
+				</p>
+				<p>She is also a lecturer for Global Project and Change Management at Windesheim University in the Netherlands and founding member of Living Cities Earth Network. She coordinated the UNESCO chair in culture, habitat and sustainable development and contributes to multiple glocal networks on systems innovation,transitions and sustainability.</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
 	</p>
@@ -53,10 +54,11 @@
 <article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
 		</h1>
 
-		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Speaks: English, Hindi
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Sustainability and Corporate Social Responsibility
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Sustainability and Corporate Social Responsibility
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Systems and design thinking for organisations
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Capacity building for leading in uncertainty
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Native Hindi
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent English
 				</li></ul>
 		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
@@ -64,7 +66,7 @@
 			
 			<script>
 				{
-					__sveltekit_b6immu = {
+					__sveltekit_uu7t7g = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -74,8 +76,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c9e976eb.js"),
-						import("../_app/immutable/entry/app.4b1b3231.js")
+						import("../_app/immutable/entry/start.3dca7196.js"),
+						import("../_app/immutable/entry/app.93b45dfa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 15],
