--- a/team/justyna.html
+++ b/team/justyna.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.3dca7196.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.e301b5fe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.eaebf7fb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.93b45dfa.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.a7219062.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.830d239a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.fe56771a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.bb30cf5b.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.148cc276.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.88723741.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/8.13b4b249.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonProjects.994b48ac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
@@ -80,7 +80,7 @@
 			
 			<script>
 				{
-					__sveltekit_uu7t7g = {
+					__sveltekit_ydyrdc = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -90,8 +90,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.3dca7196.js"),
-						import("../_app/immutable/entry/app.93b45dfa.js")
+						import("../_app/immutable/entry/start.e301b5fe.js"),
+						import("../_app/immutable/entry/app.bb30cf5b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
