--- a/team/raquel.html
+++ b/team/raquel.html
@@ -6,13 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.3dca7196.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.e301b5fe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.eaebf7fb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.93b45dfa.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.a7219062.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.830d239a.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/11.cf2c28ae.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.fe56771a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.bb30cf5b.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.148cc276.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.88723741.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/11.3ac3a5bb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -27,28 +28,53 @@
 			<button class="lg:hidden w-11 h-11 inline-block leading-[46px] text-center rounded-full bg-[#d6d6c2] float-right"><i class="fa-light fa-bars text-lg block mx-auto"></i>
 				<i class="fa-light fa-xmark text-lg block mx-auto"></i></button></div></nav></header>
 
-	<section class="content"><article class="py-14 md:py-16 lg:py-24"><div class="max-w-4xl mx-auto px-4"><h1 class="md:text-center text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950 mt-9 mb-4 lg:mt-16 lg:mb-11">Raquel</h1>
-		<p class="md:text-center lg:text-xl text-slate-500 worksans uppercase tracking-wider">About Raquel
-		</p>
+	<section class="content"><article class="pt-24 pb-9 lg:pb-16"><div class="px-4 max-w-4xl mx-auto worksans text-sm"><a href="/alliance#theteam"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div>
 
-		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget nulla facilisi etiam dignissim diam quis. Accumsan lacus vel facilisis volutpat est velit egestas. Rhoncus dolor purus non enim praesent. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Nibh sed pulvinar proin gravida hendrerit lectus a. Dui faucibus in ornare quam viverra orci. Ac felis donec et odio. Sagittis vitae et leo duis ut diam quam nulla porttitor. Non sodales neque sodales ut etiam sit amet. Vel pharetra vel turpis nunc eget lorem dolor sed viverra. Vel pharetra vel turpis nunc eget lorem dolor sed. Non blandit massa enim nec dui nunc mattis.</p></div></div></article>
+	<div class="md:mt-6 lg:mt-16 px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto mb-6 lg:mb-10"><div class="w-24 h-24 mx-auto lg:w-1/3 lg:h-64 relative"><div class="w-full h-full absolute overflow-hidden rounded-md"><img src="/images/raquel.jpg" alt="Raquel Sobral" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div></div>
 
-<article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise</h1>
-		<p class="md:text-center lg:text-xl text-slate-200 italic tracking-wide">Projects I have participated in
-		</p>
+	<div class="lg:w-2/3"><h1 class="text-center lg:text-left text-6xl md:text-7xl lg:text-9xl tracking-wide text-cyan-950">Raquel <span class="italic text-[#fca806]">Sobral</span></h1></div></div>
 
-		<div class="flex gap-4 lg:gap-6 flex-wrap my-6 md:my-12 lg:my-16"><div class="p-4 md:p-6 bg-[#a59f78] w-full rounded-md"><h2 class="text-xl md:text-2xl mb-2">Project X</h2>
-				<p class="leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget nulla facilisi etiam dignissim diam quis. Accumsan lacus vel facilisis volutpat est velit egestas. Rhoncus dolor purus non enim praesent. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Nibh sed pulvinar proin gravida hendrerit lectus a. Dui faucibus in ornare quam viverra orci. Ac felis donec et odio. Sagittis vitae et leo duis ut diam quam nulla porttitor. Non sodales neque sodales ut etiam sit amet. Vel pharetra vel turpis nunc eget lorem dolor sed viverra.</p></div>
+	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Odeceixe, Portugal</span>
 
-			<div class="p-4 md:p-6 bg-[#a59f78] w-full rounded-md"><h2 class="text-xl md:text-2xl mb-2">Project Y</h2>
-				<p class="leading-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget nulla facilisi etiam dignissim diam quis. Accumsan lacus vel facilisis volutpat est velit egestas. Rhoncus dolor purus non enim praesent. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Nibh sed pulvinar proin gravida hendrerit lectus a. Dui faucibus in ornare quam viverra orci. Ac felis donec et odio. Sagittis vitae et leo duis ut diam quam nulla porttitor. Non sodales neque sodales ut etiam sit amet. Vel pharetra vel turpis nunc eget lorem dolor sed viverra.</p></div>
-		</div></div></article></section></div>
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:info@yasminehandmade.com"><i class="fa-light fa-at mr-2"></i> Email
+			</a>
+
+		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/yasminehandprint/" target="_blank"><i class="fa-light fa-link mr-2"></i> Instagram</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://yasminehandmade.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Yasmine Handmade</a>
+				</li></ul></div></div>
+
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">Throughout her career, Raquel has accumulated 15 years of experience in humanitarian aid, with both local and international work, focusing on volunteer projects and NGO development field work.
+				</p>
+				<p class="mb-4 lg:mb-6">As someone with a long-standing commitment to community building and promoting social and environmental impact, in 2021, Raquel decided to take my passion to the next level and establish Yasmine - a brand that reflects these values. Her artisanal textile brand is founded on the principles of sustainability and corporate social responsibility.
+				</p>
+				<p class="mb-4 lg:mb-6">With a focus on artisanal work and deadstock materials, Raquel is committed to creating products that not only look beautiful but also have a real, tangible and positive impact in the world.
+				</p>
+				<p>Through Yasmine, Raquel hopes to inspire others to embrace sustainable and socially responsible practices. By doing so, we can all work together towards a more harmonious present where communities thrive and social justice is a reality.</p></div>
+
+			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
+	</p>
+	<div class="my-4 leading-relaxed italic text-slate-500 text-base"><p>Sustainable business, Social impact, Creative business, Small business processes, Managing cooperatives, Brand values</p></div></div></div></div></article>
+
+<article class="py-14 md:py-16 lg:py-24 bg-[#817c52] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="text-center text-4xl md:text-6xl lg:text-7xl tracking-wide text-white mb-4 lg:mb-11">Skills &amp; Expertise
+		</h1>
+
+		<ul class="flex gap-4 flex-wrap mt-6 md:mt-12 lg:mt-16 worksans justify-center"><li class="py-2 px-4 bg-[#a59f78] rounded-md">Sustainability
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Business values
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Creative process
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Circular economy
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Textile printing
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Textile dying
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Native Portuguese
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent English
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent Spanish
+				</li></ul>
+		<div class="worksans text-sm text-center mt-6 md:mt-12 lg:mt-16"><a href="/alliance#theteam" class="block !text-white worksans"><i class="fa-light fa-arrow-left mr-2"></i>View the team</a></div></div></article></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_uu7t7g = {
+					__sveltekit_ydyrdc = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -58,8 +84,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.3dca7196.js"),
-						import("../_app/immutable/entry/app.93b45dfa.js")
+						import("../_app/immutable/entry/start.e301b5fe.js"),
+						import("../_app/immutable/entry/app.bb30cf5b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 11],
