--- a/team/zsuzsanna.html
+++ b/team/zsuzsanna.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.3dca7196.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.e301b5fe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.eaebf7fb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.93b45dfa.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.a7219062.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.830d239a.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/17.79631bb4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.fe56771a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.bb30cf5b.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.148cc276.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.88723741.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/17.82f4b359.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -43,8 +43,9 @@
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://womazing.eu/" target="_blank"><i class="fa-light fa-link mr-2"></i> Womazing</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>My academic journey has been fueled by a love for research that goes beyond the surface. I strongly believe that understanding the „why” and intercultural communication leave a positive imprint on our world. Having spent years in foreign countries, I am passionate to connect people and empower women across cultures.
-					With a background of customer service &amp; event management, I&#39;ve mastered the art of creating lasting connections in diverse cultures. For me, networking is much more than business; it is a medium for sharing values, fostering collaboration, and shaping a brigther furture together. For this reason, I&#39;ve launched womazing.eu where we are cultivating a network that amplifies women&#39;s stories, expertise and dreams to drive impactful change around us.
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">Zsuzsanna&#39;s academic journey has been fueled by a love for research that goes beyond the surface. She strongly believes that understanding the „why” and intercultural communication leave a positive imprint on our world. Having spent years in foreign countries, Zsuzsanna is passionate to connect people and empower women across cultures.
+				</p>
+				<p class="mb-4 lg:mb-6">With a background of customer service &amp; event management, she has mastered the art of creating lasting connections in diverse cultures. For her, networking is much more than business; it is a medium for sharing values, fostering collaboration, and shaping a brigther furture together. For this reason, Zsuzsanna launched <a href="https://womazing.eu/" target="_blank">womazing.eu</a> where she is cultivating a network that amplifies women&#39;s stories, expertise and dreams to drive impactful change around us.
 				</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
@@ -72,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_uu7t7g = {
+					__sveltekit_ydyrdc = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -82,8 +83,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.3dca7196.js"),
-						import("../_app/immutable/entry/app.93b45dfa.js")
+						import("../_app/immutable/entry/start.e301b5fe.js"),
+						import("../_app/immutable/entry/app.bb30cf5b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 17],
