--- a/alliance.html
+++ b/alliance.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3dca7196.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e301b5fe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.eaebf7fb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.93b45dfa.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.a7219062.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.830d239a.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.28663be8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.9430f5f4.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fe56771a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.bb30cf5b.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.148cc276.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.88723741.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.e10714ee.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.9d2505ea.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -94,8 +94,8 @@
 		<span class="block text-base italic">Social Media Specialist</span></div>
 	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
-			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/raquel"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/xyz.jpg" alt="Raquel XYZ" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
-	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Raquel XYZ</span>
+			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/raquel"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/raquel.jpg" alt="Raquel Sobral" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
+	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Raquel Sobral</span>
 		<span class="block text-base italic">Sustainability &amp; Corporate Social Responsibility</span></div>
 	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
@@ -109,7 +109,7 @@
 			
 			<script>
 				{
-					__sveltekit_uu7t7g = {
+					__sveltekit_ydyrdc = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -119,8 +119,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3dca7196.js"),
-						import("./_app/immutable/entry/app.93b45dfa.js")
+						import("./_app/immutable/entry/start.e301b5fe.js"),
+						import("./_app/immutable/entry/app.bb30cf5b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
